Fix the missing gap in ability column icons

--- a/src/card/Card.scss
+++ b/src/card/Card.scss
@@ -350,6 +350,7 @@
 .icon-group {
     display: inherit;
     flex-direction: column;
+    gap: 1cqw;
 
     &.AnyCoral-3 {
         display: inline-flex;
